# dbt-governance

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: main.yml  pull-requests.yml
dbt_governance/: __init__.py  check.py  cli.py  config.py  constants.py  dbt_client.py  dbt_project.py  initialize.py  logging_config.py  rule_handler.py  utils.py
dbt_governance/rules/: has_meta_rules.py  has_tag_rules.py  model_owner_rule.py  primary_key_rule.py  registry.py
dbt_governance/structures/: evaluate_runner.py  evaluation_status.py  governance_config.py  governance_result.py  governance_rule.py  governance_rules_config.py  rule_evaluation.py  severity.py  validation_result.py
dbt_governance/tasks/: __init__.py  evaluate.py  list_rules.py  validate_config.py
tests/integration/: conftest.py  test_dbt_governance_evaluate.py  test_dbt_governance_help.py  test_dbt_governance_list_rules.py  test_dbt_governance_validate_config.py
tests/unit/: conftest.py  test_cli.py  test_constants.py  test_dbt_client.py  test_dbt_project.py  test_logging_config.py  test_utils.py
tests/unit/structures/: test_evaluation_status.py  test_governance_result.py  test_governance_rule.py  test_governance_rules_config.py  test_rule_evaluation.py  test_severity.py  test_validation_result.py
tests/unit/tasks/: test_evaluate.py  test_list_rules.py  test_validate_config.py
