[tool.poetry]
name = "dbt-governance"
version = "0.1.0"
description = "A flexible governance tool for dbt projects, enabling teams to define and enforce custom rules for data quality, privacy, security, and compliance. Supports single and multi-project configurations, with integrations for local development and future compatibility with dbt Cloud. Includes features for metadata validation, test coverage checks, and rule-based governance health reporting."
authors = ["Johnathan Brooks <19945186+jmbrooks@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Compatible Python versions
python = "^3.10"
# Project dependencies
dbt-core = "^1.6"
jsonschema = "^4.19"
pyyaml = "^6.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7"
black = "^23.9"
isort = "^5.13"
mypy = "^1.8"
pre-commit = "^4.0"
pytest = "^8.3"
pytest-cov = "^6.0"
ruff = "^0.1"
tox = "^4.5"
types-PyYAML = "^6.0.12.12"

[tool.poetry.scripts]
dbt-governance = "dbt_governance.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["data_build/", "logs/", "tests/", "env/", "venv/", "*venv/", ".env", ".env.*", ".git", ".tox/"]

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[tool.mypy]
mypy_path = "./dbt_governance:./tests"
strict = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=dbt_governance --cov-report=term-missing --cov-fail-under=90"
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "dbt_governance/__init__.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 90
