[tool.poetry]
name = "dbt-governance"
version = "0.1.0"
description = "A flexible governance tool for dbt projects, enabling teams to define and enforce custom rules for data quality, privacy, security, and compliance."
authors = ["Johnathan Brooks"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/python-poetry/poetry"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "dbt",
    "governance",
    "data",
    "validation",
    "testing",
    "coverage",
    "CI",
    "continuous integration",
]

[tool.poetry.scripts]
dbt-governance = "dbt_governance.cli:cli"

[tool.poetry.dependencies]
# Compatible Python versions
python = "^3.9"
# Project dependencies
dbt-core = "^1.6"
jsonschema = "^4.19"
pyyaml = "^6.0"
colorama = "^0.4"
pydantic = "^2.10"
dbt-snowflake = "^1.9"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7"
mypy = "^1.8"
pre-commit = "^4.0"
pytest = "^8.3"
pytest-cov = "^6.0"
ruff = "^0.1"
tox = "^4.5"
types-colorama = "^0.4.15.20240106"
types-PyYAML = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["data_build/", "logs/", "tests/", "env/", "venv/", "*venv/", ".env", ".env.*", ".git", ".tox/"]

[tool.mypy]
mypy_path = "./dbt_governance:./tests"
strict = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pep8 (pycodestyle) errors
    "F", # pep8 (pyflakes) formatting errors
    "N", # pep8 naming convention violations
    "W", # pep8 (pycodestyle) warnings
    "B", # flake8-bugbear design issues
    "C4", # flake8-comprehensions issues
    "ISC", # flake8 implicit string concat issues
    "Q", # flake8-quotes quote issues
    "RSE", # flake8-raise raise exception issues
    "T10", # flake8 debugger
    "T20", # flake8 print usage issues
    "PTH", # flake8 path over os issues
    "RET", # flake8 return issues
    "SLF", # flake8 self issues
    "YTT", # flake8-2020 sys version info issues
    "PIE", # flake8 misc linting issues
    "I", # isort import issues
    "PGH", # pygrep-hooks issues
    "TID", # tidy import flags
    "FLY", # flynt f-string usage issues
    "PERF", # perflint performance issues
    "PT", # pytest style and usage issues
    "PD", # pandas vet issues
    "RUF", # ruff issues
]
ignore = [
    "ISC001", # Implicit string concatenation, conflicts with formatting config
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=dbt_governance --cov-report=term-missing --cov-fail-under=90"
pythonpath = ["."]
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "dbt_governance/__init__.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 90
